--- a/ECF1 - Copie copie/ECF1 - Copie copie/html/page3.html
+++ b/ECF1 - Copie copie/ECF1 - Copie copie/html/page3.html
@@ -32,7 +32,7 @@
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav me-auto mb-2 mb-lg-0">
         <li class="nav-item">
-          <a class="nav-link active link-danger" aria-current="page" href="http://127.0.0.1:5500/#">Home</a>
+          <a class="nav-link active link-danger" aria-current="page" href="index.html">Home</a>
         </li>
         <li class="nav-item">
           <a class="nav-link active link-success" href="http://127.0.0.1:5500/html/page1.html" >Manhattan</a>
