--- a/ECF1 - Copie copie/ECF1 - Copie copie/index.html
+++ b/ECF1 - Copie copie/ECF1 - Copie copie/index.html
@@ -37,18 +37,18 @@
 <div class="collapse navbar-collapse" id="navbarSupportedContent">
   <ul class="navbar-nav me-auto mb-2 mb-lg-0">
     <li class="nav-item">
-      <a class="nav-link active link-danger" aria-current="page" href="http://127.0.0.1:5500/#">Home</a>
+      <a class="nav-link active link-danger" aria-current="page" href="index.html">Home</a>
     </li>
     <li class="nav-item">
-      <a class="nav-link active link-success" href="http://127.0.0.1:5500/html/page1.html" >Manhattan</a>
+      <a class="nav-link active link-success" href="html/page1.html" >Manhattan</a>
       
     </li>
     <li class="nav-item ">
-        <a class="nav-link active link-warning " href="http://127.0.0.1:5500/html/page2.html" >Brooklyn</a>
+        <a class="nav-link active link-warning " href="html/page2.html" >Brooklyn</a>
          
     </li>
     <li class="nav-item">
-      <a class="nav-link active" href="http://127.0.0.1:5500/html/page3.html">Harlem</a>
+      <a class="nav-link active" href="html/page3.html">Harlem</a>
     </li>
   </ul>
   <form class="d-flex" role="search">
